--- a/src/DayList.css
+++ b/src/DayList.css
@@ -30,6 +30,7 @@
   padding: 0.8em 1.2em;
   overflow: hidden;
   list-style: none;
+  max-height: 3rem;
 }
 
 .Daylist-column-heading-datum {
@@ -67,4 +68,9 @@
 .hoursButton-exit-active {
     opacity: 0.01;
     transition: opacity 200ms ease-in;
+}
+
+.Hour {
+    background: #EEF0F2;
+    color: #1B1B1E;
 }
