--- a/src/styles/DayList.css
+++ b/src/styles/DayList.css
@@ -5,7 +5,27 @@
   padding: 1em;
   text-align: center;
   max-height: 50vh;
-  overflow: scroll;
+  overflow-y: scroll;
+}
+
+.DaysList::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+.DaysList::-webkit-scrollbar
+{
+	width: 7px;
+	background-color: #F5F5F5;
+}
+
+.DaysList::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #1B1B1E;
 }
 
 .DaysList-table {
@@ -14,6 +34,7 @@
   margin: 0 0 1.5em 0;
   padding: 0;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
+  letter-spacing: .05rem;
 }
 
 .DaysList-header {
@@ -33,10 +54,6 @@
   overflow: hidden;
   list-style: none;
   max-height: 3rem;
-}
-
-.Daylist-column-heading-datum {
-    margin-right: 1rem;
 }
 
 .Day {
